--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,7 @@
         margin-left: auto;
         margin-right: auto;
       }
+
     #container{
       margin:auto;
       font-size:20px;
@@ -32,7 +33,7 @@
     <div id="container">
    <h1>Credit Client Profile</h1>
         <p>This renders a high-level view of the customer's profile. It includes directorship, accounts held by the customer and its directors, ORM status and a snapshot of the client's transactional behaviour.</p>
-    <img id="banner" src="https://flask-tutorial-1--enell261.repl.co/static/logo.jpg" height="320" class="center">
+   <img src= "https://flask-tutorial--enell261.repl.co/static/banking.jpg" class='center'>
       <p>
         Please note that while the website is under construction, data availability will be limited, please reach out to Nkosenhle Dlamini (nkosenhle.dlamini@fnb.co.sz) for comments, suggestions and recommendations. 
       </p>
