--- a/templates/login.html
+++ b/templates/login.html
@@ -2,15 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>Login</title>
   </head>
-  
-
-
-
-
-
-
-
-
-  
+  <body>
+    <h1>Login Page</h1>
+    <form actin="/login" method="POST">
+      <input type="text" name='m-number' placeholder='M1234567'>
+      <input type="submit" value="Login"      
+    </form>
+  </body>  
 </html>
