Added login button

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>Login Page</h1>
-    <form actin="/login" method="POST">
-      <input type="text" name='m-number' placeholder='M1234567'>
-      <input type="submit" value="Login"      
+    <form action="/login" method="POST">
+      <input type="text" name='m-number' placeholder='m1234567'>
+      <input type="submit" value="Login">      
     </form>
   </body>  
 </html>
