--- a/templates/home.html
+++ b/templates/home.html
@@ -38,6 +38,6 @@
         Please note that while the website is under construction, data availability will be limited, please reach out to Nkosenhle Dlamini (nkosenhle.dlamini@fnb.co.sz) for comments, suggestions and recommendations. 
       </p>
     </div>
-    <button text-align:center>Login</button>
+    <a href="{{url_for('login')}}" class="button">Login</a>
   </body>
 </html>
